-Added setting "allow_ghosts" which enables usage of ghost players when using a "player_as_entity" modifier (true by default).
-Added setting "pretty_scene_files" which makes scene JSON files look pretty (true by default).
-Added setting "start_as_recorded" which makes playback of currently recorded player start as this player (false by default) (thanks to damiendier for suggestions).
-Settings are now divided into 3 categories - recording, playback and advanced.
-Merged "/mocap scenes list_elements" into "/mocap scenes list" and "/mocap scenes element_info" into "/mocap scenes info".
-Split "player_info" modifier into "player_name" and "player_skin".
-Removed position offset arguments from "/mocap scenes add_to".
-Replaced command "/mocap recording state" with "/mocap recording list".
-Replaced settings "trackVehicleEntities", "trackItemEntities" and "trackOtherEntities" with "track_entities".
-Replaced settings "playVehicleEntities", "playItemEntities" and "playOtherEntities" with "play_entities".
-Replaced "trackPlayedEntities" setting with "prevent_tracking_played_entities" (true by default) which better represents what it's actually doing.
-Replaced "recording_sync" setting with "/mocap misc sync" command.
-Renamed settings: "playing_speed" to "playback_speed", "play_block_actions" to "block_actions_playback", "set_block_states" to "block_initialization".
-Changed settings, command names and command arguments naming convention from lower camel case to snake case.
-Added "for_all_players" optional argument to "/mocap playback stop_all".
-Renamed "from_..." to "skin_from_..." simple modifiers in "playback start" and "scene add_to" commands.
-It's now possible to add player_as_entity modifier using simple modifiers (thanks to Narfu for suggestion).
-Item types and block states are now stored using string IDs (instead of numeric IDs), providing better compatibility between different Minecraft versions and modpacks.
-Scene format is now JSON-based.